# ConSurf

./: .gitignore  AUTHORS  CONSURF_CONSTANTS.pm  CONSURF_CONSTANTS.pm.template  CONSURF_FUNCTIONS.pm  COPYING  ChangeLog  ConSurf.V0.1.pl  ConSurf.pl  Makefile.am  README.bup  README.md  configure.ac  consurf  consurf.spec  consurf_22_02.pl  consurfrc.default  cp_rasmol_gradesPE_and_pipe.pm  parseFiles.pm  pdbParser.pm  prepareMSA.pm  test.pl
3rd party software/: cd-hit_build.sh  rate4site_build.sh
3rd party software/clustalx-2.1/: colprint.xml  installer
3rd party software/rate4site.3.2.source_fast/sourceMar09/: AddLog.h  GLaguer.cpp  GLaguer.h  Makefile_slow  NNiProp.h  Nni.h  allTreesSeparateModel.h  alphabet.h  amino.cpp  amino.h  bblEM.cpp  bblEM2USSRV.cpp  bestAlpha.h  bestParamUSSRV.h  betaDistribution.h  betaUtilities.h  clustalFormat.cpp  clustalFormat.h  codonJC.cpp  computeCounts.h  computeMarginalAlg.h  computeUpAlg.cpp  datMatrixHolder.cpp  datMatrixHolder.h  distanceTable.h  distribution.cpp  doubleRep.cpp  doubleRep.h  errorMsg.cpp  evaluateCharacterFreq.cpp  evaluateCharacterFreq.h  fastaFormat.h  fromCountTableComponentToDistance2USSRV.h  generalGammaDistributionLaguerre.cpp  generalGammaDistributionLaguerre.h  givenRatesMLDistance.h  goldmanYangModel.h  granthamChemicalDistances.h  hky.cpp  nexusFormat.cpp  (+13 more)
3rd party software/rate4site.3.2.source_slow/sourceMar09/: NNiSep.cpp  Nni.cpp  aaJC.cpp  allTrees.cpp  allTrees.h  allTreesSeparateModel.cpp  alphaTrivialAccelerator.h  bblEM.h  bblEM2USSRV.h  bestAlphaManyTrees.cpp  bestParamUSSRV.cpp  betaUtilities.cpp  bootstrap.cpp  chebyshevAccelerator.cpp  chebyshevAccelerator.h  codon.cpp  codon.h  codonJC.h  computeDownAlg.h  countTableComponent.h  definitions.h  distanceBasedSeqs2Tree.h  distanceMethod.h  distanceTable.cpp  fastaFormat.cpp  fromCountTableComponentToDistance.cpp  fromCountTableComponentToDistance.h  fromCountTableComponentToDistance2USSRV.cpp  fromCountTableComponentToDistanceProp.h  fromInstructionFile.cpp  gammaDistribution.cpp  gammaUtilities.h  geneticCodeHolder.cpp  givenRatesMLDistance.cpp  indelModel.cpp  likeDist.cpp  likelihoodComputation2USSRV.h  logFile.h  mulAlphabet.cpp  njConstrain.h  (+17 more)
debian/: changelog  control  copyright  links  lintian-overrides  rules  templates
example/: 2vaa.aln  2vaa_A_msa_file.fas  2vaa_small.aln  Makefile.am  PDB_MSA_1lk2_A.fasta2  pdb32c2.ent
old_1lk2_example/: Makefile.am
old_1lk2_output/: _A.rejected_homolougs.fas  r4sOrig.res
output/: Makefile.am  _A.homolougs.fas  _A.protein_query.blast  _A_Tree.txt
vagrant_ConSurf/: Vagrantfile  rate4site_build.sh
vagrant_ConSurf/ConSurf-develop/: AUTHORS  ConSurf_Grades_Parser.pm  MSA_parser.pm  TREE_parser.pm  chimera_consurf.cmd  configure.ac  consurf  consurf_new.py  consurfrc.default  new_consurf_run_calc.pl  rasmol_gradesPE_and_pipe.pm  rate4site_routines.pm
vagrant_ConSurf/ConSurf-develop/output/: Makefile.am  PDB_SEQRES__A.aln  PDB_SEQRES__A.fasta2  PDB_SEQRES__A.out  _A.cdhit.out  (+6 more)
vagrant_ConSurf/clustalw-2.1/: clustalw_help
vagrant_ConSurf/clustalx-2.1/: README  clustalx.hlp  coldna.xml  colprot.xml
(+156 files in other folders)
